# FLM

./: .eslintrc.json  .gitattributes  .gitignore  APP_INFO.md  BUG.md  BUG_FIX_PLAN.md  BUILD_WORKFLOW_FIXES.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_REVIEW_BUILD_WORKFLOW.md  CODE_REVIEW_IMPROVEMENTS_2025.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_ISSUES_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEEP_ANALYSIS_ISSUES.md  DETAILED_BUG_FIX_PLAN.md  DEVELOPMENT_PROCESS_AUDIT_2025.md  DOCUMENTATION_EVALUATION_REPORT.md  FINAL_COMPREHENSIVE_ISSUES.md  FLM_CODE_REVIEW_REPORT_2025_COMPREHENSIVE.md  FLM_CODE_REVIEW_REPORT_2025_FINAL.md  FLM_CODE_REVIEW_REPORT_2025_LATEST.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_IMPLEMENTATION_2025.md  IMPROVEMENTS_IMPLEMENTATION_2025_LATEST.md  IMPROVEMENTS_SUMMARY_2025.md  LICENSE  LICENSES.md  LICENSE_AUDIT_REPORT.md  PHASE1_CODE_REVIEW.md  PHASE1_SAFETY_VERIFICATION_REPORT.md  QUICK_TEST_GUIDE.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_POLICY.md  TEST_AUDIT_REPORT_V12_POST_FIX.md  TEST_EXECUTION_GUIDE.md  TEST_FIXES_FINAL_SUMMARY.md  USAGE_STATUS.md  (+18 more)
crates/apps/flm-cli/: Cargo.toml  README.md
crates/apps/flm-cli/src/: lib.rs  main.rs
crates/apps/flm-cli/tests/: api_keys_test.rs  api_prompts_test.rs  chat_test.rs  check_test.rs  config_test.rs  e2e_test.rs  engine_repository_test.rs  engines_test.rs  integration_test.rs  migrate_legacy_test.rs  model_profiles_test.rs  proxy_cli_test.rs  secrets_dns_test.rs  security_backup_test.rs
crates/engines/flm-engine-ollama/: Cargo.toml
crates/engines/flm-engine-ollama/src/: lib.rs
crates/engines/flm-engine-ollama/tests/: integration_test.rs
crates/flm-cli/: Cargo.toml  README.md
crates/flm-cli/src/: lib.rs  main.rs
crates/flm-cli/src/adapters/: api_prompts.rs  config.rs  engine.rs  mod.rs  model_profiles.rs  process_controller.rs  proxy.rs  security.rs
crates/flm-cli/src/cli/: api_keys.rs  api_prompts.rs  chat.rs  engines.rs  mod.rs  proxy.rs  security.rs
crates/flm-cli/src/commands/: api_keys.rs  api_prompts.rs  chat.rs  check.rs  config.rs  engines.rs  error.rs  mod.rs  model_profiles.rs  models.rs  proxy.rs  security.rs
crates/flm-cli/src/db/: migration.rs  mod.rs
crates/flm-cli/src/utils/: mod.rs  paths.rs
crates/flm-cli/tests/: api_prompts_test.rs  chat_test.rs  check_test.rs  cli_test.rs  config_test.rs  e2e_test.rs  engine_repository_test.rs  integration_test.rs  models_test.rs  process_controller_test.rs  proxy_cli_test.rs  proxy_repository_test.rs  security_backup_test.rs  security_test.rs
crates/flm-core/: Cargo.toml  README.md
crates/flm-core/migrations/: 20250101000001_create_config_db.sql  20250101000003_init_security_policy.sql  20250127000002_extend_audit_logs.sql
crates/flm-core/src/: domain.rs  error.rs  lib.rs  ports.rs  use_cases.rs
crates/flm-core/src/adapters/: mod.rs  sqlite_proxy_repository.rs
crates/flm-core/src/domain/: chat.rs  engine.rs  model.rs  models.rs  proxy.rs  security.rs
crates/flm-core/src/ports/: config.rs  engine.rs  http.rs  mod.rs  proxy.rs  security.rs
crates/flm-core/src/services/: certificate.rs  config.rs  engine.rs  mod.rs  proxy.rs  security.rs
crates/flm-core/src/use_cases/: engine_detection.rs  model_list.rs
crates/flm-core/tests/: config_service_test.rs  integration_test.rs  proxy_service_test.rs  security_service_test.rs
crates/flm-core/tests/common/: mod.rs
crates/flm-engine-llamacpp/: Cargo.toml
crates/flm-engine-llamacpp/src/: adapter.rs  lib.rs
crates/flm-engine-llamacpp/tests/: integration_test.rs
crates/flm-engine-lmstudio/: Cargo.toml
crates/flm-engine-lmstudio/src/: adapter.rs  lib.rs
crates/flm-engine-lmstudio/tests/: integration_test.rs
crates/flm-engine-ollama/: Cargo.toml  README.md
crates/flm-engine-ollama/src/: lib.rs
crates/flm-engine-ollama/tests/: integration_test.rs
crates/flm-engine-vllm/: Cargo.toml  README.md
crates/flm-engine-vllm/src/: adapter.rs  lib.rs
crates/flm-engine-vllm/tests/: integration_test.rs
crates/flm-proxy/: Cargo.toml  README.md
crates/flm-proxy/src/: adapters.rs  controller.rs  daemon.rs  engine_repo.rs  http_client.rs  lib.rs  main.rs  middleware.rs  process_controller.rs  server.rs  utils.rs
crates/flm-proxy/src/security/: anomaly_detection.rs  intrusion_detection.rs  ip_blocklist.rs  mod.rs  resource_protection.rs
crates/flm-proxy/tests/: botnet_security_test.rs  integration_test.rs
crates/libs/lego-runner/: Cargo.toml  build.rs
crates/libs/lego-runner/src/: lib.rs
crates/services/flm-proxy/: Cargo.toml
crates/services/flm-proxy/src/: dns.rs  (+12 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: install-ca.nsh  postinst  postinstall.sh  postrm
src-tauri/resources/certs/: README.md  flm-ca.crt
src-tauri/resources/scripts/: install-ca.ps1  install-ca.sh  uninstall-ca.ps1  uninstall-ca.sh
src-tauri/src/: auth.rs  auth_proxy.rs  commands.rs  lib.rs  main.rs  ollama.rs
src-tauri/src/auth/: mod.rs  oauth.rs  rbac.rs
src-tauri/src/collaboration/: mod.rs
src-tauri/src/commands/: alerts.rs  api.rs  backup.rs  cli_bridge.rs  database.rs  engine.rs  firewall.rs  ipc_version.rs  mod.rs  model_converter.rs  model_sharing.rs  oauth.rs  ollama.rs  performance.rs  plugin.rs  port.rs  remote_sync.rs  scheduler.rs  settings.rs  suggestions.rs  system.rs  updater.rs
src-tauri/src/database/: connection.rs  encryption.rs  integrity.rs  migrations.rs  mod.rs  models.rs  repository.rs  schema.rs
src-tauri/src/engines/: custom_endpoint.rs  installer.rs  llama_cpp.rs  lm_studio.rs  manager.rs  mod.rs  models.rs  ollama.rs  traits.rs  updater.rs  vllm.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/utils/: audit_log.rs  bundled_ollama.rs  cache.rs  certificate.rs  error.rs  http_client.rs  huggingface.rs  input_validation.rs  ip_whitelist.rs  letsencrypt.rs  logging.rs  memory_monitor.rs  mod.rs  model_catalog_data.rs  model_converter.rs  model_params.rs  model_review.rs  model_sharing.rs  modelfile.rs  network.rs  query_optimizer.rs  rate_limit.rs  remote_sync.rs  scheduler.rs
(+1859 files in other folders)
