[workspace]
resolver = "2"
members = [
    "crates/flm-core",
    "crates/flm-cli",
    "crates/flm-proxy",
    "crates/flm-engine-ollama",
    "crates/flm-engine-vllm",
    "crates/flm-engine-lmstudio",
    "crates/flm-engine-llamacpp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["FLM Team"]
license = "MIT"
repository = "https://github.com/Unjuno/FLM"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
# HTTP client/server (temporarily commented out due to Rust 1.82 compatibility issues)
# Will be re-enabled after Rust 1.83 upgrade or finding compatible versions
# reqwest = { version = "0.11", features = ["json", "stream"] }
# axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
# tower = { version = "0.4" }
# tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
# Cryptography
aes-gcm = "0.10"
sha2 = "0.10"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
# Date/Time
chrono = { version = "0.4", features = ["serde"] }
# Others
uuid = { version = "1.0", features = ["v4", "serde"] }
# Lock ICU-dependent packages to Rust 1.82 compatible versions
idna = "=1.0.3"
url = "=2.5.4"
