[workspace]
members = [
    "crates/core/flm-core",
    "crates/apps/flm-cli",
    "crates/services/flm-proxy",
    "crates/engines/flm-engine-ollama",
    "crates/engines/flm-engine-vllm",
    "crates/engines/flm-engine-lmstudio",
    "crates/engines/flm-engine-llamacpp",
    "crates/libs/lego-runner",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FLM Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/flm/flm"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
once_cell = "1.19"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }

# HTTP/Proxy
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["limit", "timeout"] }
tower-http = { version = "0.5", features = ["auth", "cors", "trace"] }

# Security
argon2 = "0.5"
ring = "0.17"

# Certificate management (Phase 3)
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
x509-parser = "0.18"
time = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Dev dependencies are specified per crate, not in workspace

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

