[package]
name = "flm"
version = "1.0.0"
description = "FLM - Local LLM API Management Tool"
authors = ["FLM Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.5"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
# SQLiteデータベース
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
# 暗号化（APIキー保存用）
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
# ディレクトリパス取得
dirs = "5.0"
# 正規表現
regex = "1.10"

