[workspace]

[package]
name = "flm-ui"
version = "0.1.0"
description = "FLM - Local LLM API Management Tool (Tauri UI)"
authors = ["FLM Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/flm/flm"

[[bin]]
name = "flm-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
flm-core = { path = "../crates/core/flm-core" }

[features]
default = []
packaged-ca = []

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
which = "5.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
flm-core = { path = "../crates/core/flm-core" }

