[package]
name = "flm-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "flm"
path = "src/main.rs"

[dependencies]
flm-core = { path = "../flm-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
clap.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

