[package]
name = "flm-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "flm"
path = "src/main.rs"

[dependencies]
flm-core = { path = "../flm-core" }
flm-proxy = { path = "../flm-proxy" }
flm-engine-ollama = { path = "../flm-engine-ollama" }
flm-engine-vllm = { path = "../flm-engine-vllm" }
flm-engine-lmstudio = { path = "../flm-engine-lmstudio" }
flm-engine-llamacpp = { path = "../flm-engine-llamacpp" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
clap.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }
which = "5.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
local-ip-address = "0.6"
uuid.workspace = true
rand = "0.8"

[dev-dependencies]
axum = { workspace = true }
tempfile = "3.8"
tokio-test = "0.4"

