[package]
name = "flm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "flm_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
argon2.workspace = true
async-trait.workspace = true
rcgen = { workspace = true }
x509-parser = { workspace = true }
ring.workspace = true
time = { version = "0.3", features = ["macros"] }

[dev-dependencies]
tokio-test = "0.4"

