[package]
name = "flm-engine-llamacpp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "flm_engine_llamacpp"
path = "src/lib.rs"

[dependencies]
flm-core = { path = "../flm-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true

