[package]
name = "flm-engine-ollama"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FLM Ollama Engine Adapter"

[dependencies]
flm-core = { path = "../flm-core" }
tokio = { workspace = true }
# reqwest = { workspace = true }  # Temporarily disabled
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
