[package]
name = "flm-engine-ollama"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "flm_engine_ollama"
path = "src/lib.rs"

[dependencies]
flm-core = { path = "../flm-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true

