[package]
name = "flm-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "flm_proxy"
path = "src/lib.rs"

[[bin]]
name = "flm-proxy"
path = "src/main.rs"

[dependencies]
flm-core = { path = "../flm-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
hyper.workspace = true
tower.workspace = true
tower-http.workspace = true
async-trait.workspace = true
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
ipnet = "2.9"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"

