[package]
name = "flm-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "flm_proxy"
path = "src/lib.rs"

[[bin]]
name = "flm-proxy"
path = "src/main.rs"

[dependencies]
flm-core = { path = "../flm-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
axum = { workspace = true, features = ["macros"] }
hyper.workspace = true
tower.workspace = true
tower-http.workspace = true
async-trait.workspace = true
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
ipnet = "2.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
sysinfo = "0.30"
# TLS support for packaged-ca mode (Phase 3)
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio", "service"] }

[features]
default = []
packaged-ca = []

[dev-dependencies]
tempfile = "3.8"

