[package]
name = "flm-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "flm_proxy"
path = "src/lib.rs"

[[bin]]
name = "flm-proxy"
path = "src/main.rs"

[dependencies]
flm-core = { path = "../../core/flm-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
axum = { workspace = true, features = ["macros", "multipart"] }
hyper.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-service = "0.3"
async-trait.workspace = true
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
futures = "0.3"
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
ipnet = "2.9"
chrono = { version = "0.4", features = ["serde"] }
arc-swap = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
sysinfo = "0.30"
# TLS support for packaged-ca mode (Phase 3)
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "1.0"
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio", "service"] }
base64 = "0.21"
rustls-acme = { version = "0.14.1", path = "rustls-acme", default-features = false, features = ["tokio", "tower", "ring", "webpki-roots"] }
futures-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-webpki = { version = "0.103", default-features = false }
pem = "3.0"
x509-parser = "0.18"
sha2 = "0.10"
lego-runner = { path = "../../libs/lego-runner", optional = true }

[features]
default = []
packaged-ca = []
dns01-preview = ["lego-runner"]

[dev-dependencies]
tempfile = "3.8"
urlencoding = "2.1"

